Added delete for books model

--- a/books/templates/books/all_books.template.html
+++ b/books/templates/books/all_books.template.html
@@ -12,6 +12,7 @@
             <li>
                 {{b.title}}
                 <a class="btn btn-primary btn-sm" href="{% url 'update_book_route' book_id=b.id %}">Edit</a>
+                <a class="btn btn-primary btn-sm" href="{% url 'delete_book_route' book_id=b.id %}">Delete</a>
             </li>
         {% endfor %}
     </ul>
