--- a/books/templates/books/all_authors.template.html
+++ b/books/templates/books/all_authors.template.html
@@ -12,6 +12,7 @@
             <li>
             {{a.first_Name}} {{a.last_Name}}
             <a class="btn btn-primary btn-sm" href="{% url 'update_author_route' author_id=a.id %}">Edit</a>
+            <a class="btn btn-primary btn-sm" href="{% url 'delete_author_route' author_id=a.id %}">Delete</a>
             </li>
         {% endfor %}
     </ul>
