--- a/books/templates/books/index.template.html
+++ b/books/templates/books/index.template.html
@@ -2,15 +2,24 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="{% static 'style.css' %}">
+	<title>Document</title>
 </head>
-<body>
-    <h1> Welcome to bookreview</h1>
-    <p>Hi {{first_name}} {{last_name}}</p>
-    <img src="{% static 'harry potter.jpeg'%}"/>
+
+<body> 
+	{% if request.user.is_authenticated  %}
+	<p>Welcome {{request.user}}!!!!</p>
+	{% else %}
+	<p>Please <a href="accounts/login">Login</a></p>
+	{%endif%}
+
+	<h1> Welcome to bookreview</h1>
+	<p>Long time no see, {{first_name}} {{last_name}}</p>
+	<img src="{% static 'harry potter.jpeg'%}"/>
 </body>
+
 </html>
