Added Form Crispy

--- a/books/templates/books/create_book.template.html
+++ b/books/templates/books/create_book.template.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "base.template.html" %} 
+{%load crispy_forms_tags %} 
+
+{%block content%}
     <h1>Create Book!</h1>
     <form method="POST">
         {% csrf_token %}
-        {{ form.as_p}}
-
+        {{ form|crispy}}
         <input type="Submit"/>
     </form>
-</body>
-</html>
+{%endblock%}
