--- a/books/templates/books/all_books.template.html
+++ b/books/templates/books/all_books.template.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.template.html'%}
+
+{% block content%}
     <p>All books!</p>
     <ul>
         {% for b in books %}
@@ -16,5 +11,4 @@
             </li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{%endblock%}
